rust/tests/snapshots/help/catalog.snap
---
source: tests/cli/snapshots.rs
---
Browse available platforms

Usage: vendo catalog [OPTIONS] <COMMAND>

Commands:
  list               List all available platforms
  get                Get details for a specific platform
  credential-schema  Print the credential fields required to create an app of this type
  help               Print this message or the help of the given subcommand(s)

Options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help
