rust/tests/snapshots/help/config.snap
---
source: tests/cli/snapshots.rs
---
Manage CLI configuration

Usage: vendo config [OPTIONS] <COMMAND>

Commands:
  set    Set configuration values
  show   Inspect low-level CLI configuration
  use    Alias for `vendo profile switch`
  list   Alias for `vendo profile list`
  reset  Delete all CLI configuration
  help   Print this message or the help of the given subcommand(s)

Options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help
