rust/tests/snapshots/help/dictionary.snap
---
source: tests/cli/snapshots.rs
---
Browse the data dictionary catalog

Usage: vendo dictionary [OPTIONS] <COMMAND>

Commands:
  list    List catalog definitions (events by default)
  search  Search one subject type by text in subject ID, name and description
  get     Look up one catalog definition by the subject ID from list or search, or an alias such as event:<name>

Options:
  -h, --help  Print help

Global options:
      --profile <name>  Use a specific account profile (or set VENDO_PROFILE)
      --debug           Enable verbose request diagnostics
