rust/tests/snapshots/help/login.snap
---
source: tests/cli/snapshots.rs
---
Authenticate with your Vendo account

Usage: vendo login [OPTIONS]

Options:
      --api-key <key>      API key for headless/CI login (requires --account)
      --account <id>       Account ID for headless/CI login (requires --api-key)
      --env <environment>  Target instance: "staging" or "prod" (default: VENDO_API_URL/profile, else prod)
      --base-url <url>     Explicit API base URL (overrides --env)
      --force              Sign in through the browser again, even when the saved API key works
      --json               Output raw JSON
  -h, --help               Print help

Global options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo login
  $ vendo login --env staging
  $ vendo login --force
  $ vendo login --api-key vendo_sk_... --account <account-id>
